envoy-xds/envoy-example/envoy/conf/envoy-cluster.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

# 配置静态 API
static_resources:
  listeners:
  - name: listener_0 # 监听器的名称
    address:
      socket_address:
        address: 0.0.0.0 # 监听器的地址
        port_value: 10000 # 监听器的端口

    filter_chains: # 配置过滤器链
    - filters:
      # 过滤器配置的名称，要填写 typed_config 配置的过滤器指定的名称
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          # 启用 http_connection_manager
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters: # 定义http过滤器链
          - name: envoy.filters.http.router # 调用7层的路由过滤器
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: # 路由规则，发送请求到 nginx-app 集群
                  host_rewrite_literal: nginx-app-cluster
                  cluster: nginx-app-cluster

  clusters:
  - name: nginx-app-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nginx-app-cluster
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: nginx-app-1
                    port_value: 80
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: nginx-app-2
                    port_value: 80
