envoy-xds/envoy-example/envoy/conf/envoy-standalone.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

# 配置静态 API
static_resources:
  listeners:
  - name: listener_0 # 监听器的名称
    address:
      socket_address:
        address: 0.0.0.0 # 监听器的地址
        port_value: 10000 # 监听器的端口

    filter_chains: # 配置过滤器链
    - filters:
      # 过滤器配置的名称，要填写 typed_config 配置的过滤器指定的名称
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          # 启用 http_connection_manager
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters: # 定义http过滤器链
          - name: envoy.filters.http.router # 调用7层的路由过滤器
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: # 路由规则，发送请求到 nginx-app 集群
                  host_rewrite_literal: nginx-app
                  cluster: nginx-app

  clusters:
  - name: nginx-app # 集群的名称
    type: LOGICAL_DNS # 用于解析集群（生成集群端点）时使用的服务发现类型，可用值有STATIC、STRICT_DNS 、LOGICAL_DNS、ORIGINAL_DST和EDS等；
    connect_timeout: 0.25s
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN # 负载均衡算法，支持ROUND_ROBIN、LEAST_REQUEST、RING_HASH、RANDOM、MAGLEV和CLUSTER_PROVIDED；
    load_assignment:
      cluster_name: nginx-app
      endpoints: # 需要进行负载均衡的端点列表
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  # 这里因为是部署到 docker 容器内部去，不能写 127.0.0.1/localhost 写 宿主机的 ipv4 地址或者 docker 的 eth0 网卡或者 容器名（在同一网络下）
                  address: nginx-app-2
                  port_value: 80
